istio-teaching/gateway-api/v1alpha2/gateway/passthough/nginx-tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo
    namespace: istio-system
    kind: Gateway
  rules:
  - backendRefs:
    - name: my-nginx
      port: 443
